fixed font issue on firefox and animation on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
 /*font-size: 100px;*/
 	/*font-size:1.1em;*/
 	color:#a7a9ac;
-	font-family:"Open Sans" sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	line-height:1.4em;
 	background-color:#eeeeee;
 	overflow: hidden;
@@ -20,11 +20,14 @@ body{
 .panel{
 	opacity:0;
 	transition: opacity 0.5s ease-in-out, transform 1s ease-in-out;
+	-webkit-transition: opacity 0.5s ease-in-out, -webkit-transform 1s ease-in-out;
 	transform: translateY(0px);
+	-webkit-transform: translateY(0px);
 }
 .panel.first{
 	opacity:1;				
 	transform: translateY(-10px);
+	-webkit-transform: translateY(-10px);
 }
 
 .scrollbar-track {
@@ -90,6 +93,7 @@ a:hover{
 	box-shadow: 0 0 5em rgba(0,0,0,0.5);
 	opacity:0;
 	transition: opacity 1s ease-in-out;
+	-webkit-transition: opacity 1s ease-in-out;
 }
 
 .videoBg{
@@ -101,6 +105,7 @@ a:hover{
 	background:rgba(0,0,0,0.8);
 	opacity:0;
 	transition: opacity 0.5s ease-in-out;
+	-webkit-transition: opacity 0.5s ease-in-out;
 }
 
 .logoText{
